--- a/style.css
+++ b/style.css
@@ -1,4 +1,42 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 body
 {
-    background-color: blueviolet;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
 }
+span
+{
+    color: orange;
+}
+section
+{
+    display: flex;
+}
+.top-banner
+{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+.half-width
+
+{
+    padding-left: 10%;
+    width:50%;
+}
+.half-width img
+{
+    width:80%;
+}
+a
+{
+    display: inline-block;
+    padding: 10px 40px;
+    margin-top: 10px;
+    text-decoration: none;
+    background:linear-gradient(orange,tomato);
+    border-radius: 5px;
+    color:white;
+    font-weight:700
