add section one

--- a/style.css
+++ b/style.css
@@ -39,4 +39,5 @@ a
     background:linear-gradient(orange,tomato);
     border-radius: 5px;
     color:white;
-    font-weight:700
+    font-weight:700;
+}
